# jianying-aroll-broll-suite

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
docs/: architecture.md  draft-format-notes.md  openai-codex-for-oss-application.md  workflow.md
examples/: broll_design_sample.md  broll_exec_plan_sample.csv  broll_semantic_plan_sample.csv  config.sample.json  final_subtitles_sample.srt
jianying-ai-image-aligner/: .env.example  .gitignore  AGENTS.md  README.md  agent_inputs.example.json  cleanup_runtime.ps1  pipeline_current_draft.ps1  run_align_ai_images.ps1  run_bind_current_draft.ps1  run_create_test_visual_slot_package.ps1  run_direct_draft_write.ps1  run_drag_1p3s_dry_run.ps1  run_drag_1p3s_execute.ps1  run_make_1p3s_plan.ps1  run_negative_tests.ps1  run_pipeline_contract_check.ps1  run_plan_v1.ps1  run_preproduction_check.ps1  run_set_image_default_1p3s.ps1  run_ui_builder_poc.ps1
jianying-aroll-inspector/: .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  README_UAT.md  run_aroll_auto_optimize.ps1  run_aroll_cleanup_runtime.ps1  run_aroll_corrective_v5.ps1  run_aroll_decision_dryrun.ps1  run_aroll_deepseek_decision.ps1  run_aroll_inspect.ps1  run_aroll_make_dev_snapshot.ps1  run_aroll_make_release.ps1  run_aroll_operator.ps1  run_aroll_phase4_diagnostics.ps1  run_aroll_phase4b_dryrun.ps1  run_aroll_phase4c2_corrected_word_poc.ps1  run_aroll_phase4c3_sentence_gap_poc.ps1  run_aroll_phase4c4_audio_pause_poc.ps1  run_aroll_phase4c5_pause_tighten_poc.ps1  run_aroll_phase4c_word_write_poc.ps1  run_aroll_phase4d2_75s_test.ps1  (+11 more)
(+541 files in other folders)
